# cos484final

./: .gitignore  FINAL.md  LICENSE  README.md  data.py  data_openwebtext.py  environment.txt  pyproject.toml  requirements.txt
fairseq/criterions/: xentropy_with_aux_loss.py
fairseq/models/: transformer.py  transformer_lm.py
