[tool.poetry]
name = "to-be-named"
version = "1.0"
description = "Dependency manager for to-be-named project"
authors = ["Windsor Nguyen, Everett Shen, Joie Zhang"]
license = "Apache 2.0"
# homepage = ""
repository = "https://github.com/windsornguyen/cos484final"
keywords = ["nlp"]

[tool.poetry.dependencies]
python = ">=3.9"
torch = "^2.2.1"
setuptools = "^69.5.1"
numpy = "^1.26.4"
datasets = "^2.19.0"
pandas = "^2.2.2"
ninja = "^1.11.1.1"
speedtest-cli = "^2.1.3"
polars = "^0.20.23"

[tool.poetry.dev-dependencies]
# See `ruff help` for more on Ruff's top-level commands.
ruff = "^0.4.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assuming Python 3.11+.
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# This is the (only) correct way to style strings (all my homies hate PEP 8)
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"  # Enforce double quotes for docstrings
inline-quotes = "single"     # Enforce single quotes for inline strings

[tool.ruff.format]
quote-style = "single"       # Default to single quotes for auto-formatting

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = [
  "setuptools>=18.0",
  "wheel",
  "cython",
  "numpy>=1.21.3",
  "torch>=1.10",
]
build-backend = "setuptools.build_meta"